--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
   assets:
     - assets/images/flies/
     - assets/images/bg/
+    - assets/images/branding/
+    - assets/images/ui/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
